--- a/app/src/main/res/xml/motion_scene.xml
+++ b/app/src/main/res/xml/motion_scene.xml
@@ -44,12 +44,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
-            android:scaleX="0"
+            android:scaleX="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="#F63123" />
+                app:customColorValue="#00000000" />
         </Constraint>
 
         <Constraint
@@ -112,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
+            android:scaleX="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
@@ -125,12 +126,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="50dp"
-            android:scaleX="0"
+            android:scaleX="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="#5FA123" />
+                app:customColorValue="#00000000" />
         </Constraint>
 
         <Constraint
